--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -405,6 +405,12 @@ body {
         .password {
           margin-top: 30px;
         }
+        .error{
+          font-size: 14px;
+          color: red;
+          max-width: 160px;
+          opacity: .7;
+        }
       }
     }
 
