--- a/src/scss/settings/_colors.scss
+++ b/src/scss/settings/_colors.scss
@@ -3,3 +3,4 @@ $olive_green: #5E5322; // "zielony"
 $canary_yellow: #FAD648; // zółty
 $stone: #737373; // jasny szary
 $charcoal: #3C3C3C; // ciemny szary
+$contact: #3C3C3C26; // szary
