--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -111,11 +111,12 @@ body {
               li {
                 text-transform: uppercase;
                 font-size: 36px;
-                border: 1px solid;
+                border: 0.75px solid $charcoal;
                 max-width: 200px;
                 padding: 13px 60px;
                 color: $charcoal;
                 line-height: 45px;
+                font-weight: 300;
               }
 
               .link_collection {
@@ -279,9 +280,10 @@ body {
       font-size: 36px;
       color: $charcoal;
       text-transform: uppercase;
-      border: 1px solid $olive_green;
+      border: 0.75px solid $charcoal;
       padding: 25px 80px;
       margin: 40px 0 80px 0;
+      font-weight: 300;
     }
   }
 
@@ -477,13 +479,13 @@ body {
           justify-content: center;
           gap: 150px;
           font-size: 24px;
-          margin: 100px auto 70px auto;
+          margin: 100px 615px 70px auto;
           max-width: 170px;
 
           .pagi_border {
-            border: 1px solid black;
+            border: 0.75px solid $charcoal;
             text-align: center;
-            padding: 25px;
+            padding: 25px 42px;
             margin-top: -12px;
           }
         }
@@ -573,6 +575,9 @@ body {
 
           input {
             border: none;
+            &::placeholder{
+              color: $contact;
+            }
           }
 
           .name_input, .email_input {
@@ -602,16 +607,20 @@ body {
           margin-top: 12px;
           resize: none;
           text-align: justify-all;
+          &::placeholder{
+            color: $contact;
+            line-height: 18px;
+          }
         }
 
         .button_box {
 
           .send_message {
+            border: 0.75px solid $charcoal;
             float: right;
             margin-top: 60px;
             padding: 13px 52px;
             background: white;
-            outline: none;
             font-size: 18px;
             cursor: pointer;
           }
